[project]
name = "fastapi-intro"
version = "0.0.1"
description = ""
authors = [
    { name = "John Christopher Jones", email = "john@johnjones.dev" },
]
dependencies = [
    "uvicorn>=0.18.2",
    "pydantic>=1.9.1",
    "fastapi>=0.79.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.build]
includes = ["**/src/", "README.md"]
package-dir = "src"


[tool.pdm.scripts]
docker-build = "docker build . -t fastapi-intro:latest"
docker-run = "docker run --rm -it -p 8000:8000 fastapi-intro:latest"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pytest>=7.1.2",
]
